  UNIQUE builds. (VRI)
- Makefile include/nls.h tools/bug.c util/nls.c util/nlsasm.S: Replaced
  CONF_NO_NLS by !CONF_WITH_NLS. (VRI)
- bios/bios.c include/nls.h util/nls.c: Removed all NLS functions when
  !CONF_WITH_NLS. (VRI)
- bios/country.c bios/country.h bios/machine.c: Rework the AKP/IDT detection
  algorithm. (VRI)

2012-05-10
- bios/country.h desk/deskapp.c desk/deskinf.c: Use the IDT date ordering in
  the default desktop. (VRI)
- desk/deskapp.c: Use the IDT time format in the default desktop. (VRI)

2012-05-13
- bios/screen.c: Fix bug: Falcon ST compatibility colour modes were wrong
  height on VGA monitor. (RFB)

2012-05-18
- bios/comprimg.S bios/screen.c bios/startup.S bios/tosvars.h
  tools/mkheader.awk: Renamed os_pal to os_conf. (VRI)
- bios/country.c: [3527804] Use the os_conf variable from the OS header as
  default language. This allows again the usage of tos-lang-change. (VRI)
- bios/comprimg.S bios/startup.S tools/mkheader.awk: Remove the OS_CONF define.
  Use the os_conf variable instead. (VRI)
- aes/geminit.c bios/screen.c desk/deskapp.c desk/deskmain.c desk/deskrez.c:
  Fixed compilation for non-Atari hardware. (VRI)
- include/intmath.h util/intmath.c: Implement mul_div() using muls/divs. (VRI)

2012-05-19
- po/fr.po: Update. (VRI)

2012-05-20
- po/fi.po: Update. Contributed by Eero Tamminen. (VRI)
- po/es.po: Update. Contributed by David Galvez. (VRI)

2012-05-21
- bios/screen.c: Fixed check_moderez() when CONF_WITH_VIDEL was not
  defined. (RFB)

2012-05-22
- po/it.po: Update. Contributed by Lodovico Zanier. (VRI)

2012-05-23
- po/ru.po: Update. Contributed by Dima Sobolev. (VRI)
- bios/bios.c bios/bios.h bios/chardev.c bios/chardev.h bios/ikbd.c
  bios/ikbd.h bios/midi.c bios/midi.h bios/parport.c bios/parport.h:
  Fix Bconout() to return long rather than void. (RFB)
- bdos/bdosmain.c: Fix Fwrite() for AUX: or PRN:. (RFB)

2012-05-28
- doc/readme-cartridge.txt release.mk: New emutos-cartridge binary archive
  built by make release. (VRI)